# Hyprhook

./: .gitignore  LICENSE.md  Makefile  README.md  flake.nix  hyprpm.toml
examples/which-key/: which-key.sh
examples/which-key/eww/: eww.scss  eww.yuck
hyprhook/: CMakeLists.txt  Makefile  default.nix  meson.build
hyprhook/src/: Parser.cpp  Parser.hpp  globals.hpp  main.cpp
